# bcgs-haskell

./: .gitignore  README.md  bcgs.cabal  job.json  plotStats.R  samplejob.json  stack.yaml
bench/: Bench.hs  bench.html
src/: Analytics.hs  Main.hs
src/Data/: BlumeCapel.hs  Graph.hs  Grid.hs  Lattice.hs
src/Data/BlumeCapel/: GSIO.hs  GSNetwork.hs  MaxFlow.hs  Statistics.hs
src/Data/Graph/: BFS.hs  Grid.hs  Lattice.hs  MaxFlow.hs
src/Data/Graph/PushRelabel/: Internal.hs  Pure.hs  STM.hs
src/Test/: BCTest.hs  BlumeCapel.hs  Grid.hs  Test.hs
src/Test/BlumeCapel/: GSIO.hs  GSNetwork.hs  MaxFlow.hs
src/Test/Graph/: BFS.hs  Grid.hs  MaxFlow.hs
test/: Spec.hs  normal.eps  trunc.eps
test/Test/: BlumeCapel.hs
test/Test/BlumeCapel/: GSIO.hs  GSNetwork.hs
