name:                bcgs
version:             0.1.0.0
synopsis:            Ground State calculations of Blume Capel random bond model
-- description:
homepage:            https://github.com/tosku/bcgs-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Thodoris Papakonstantinou
maintainer:          mail@tpapak.com
copyright:           2017 Thodoris Papakonstantinou
category:            Physics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.Lattice
                     , Test.Test
                     , Data.Grid
                     , Test.Grid
                     , Data.BlumeCapel
                     , Test.BlumeCapel
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , vector
                     , lens >= 4.15.1
                     , stm >= 2.4.4.1
                     , Stack >= 0.3.2
                     , template-haskell >= 2.11.1.0
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.7.1
                     , Unique
                     , unix
                     , async >= 2.1.1
                     , aeson
                     , prng >= 0.1.0.0
  default-language:    Haskell2010

executable bcgs-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , stm >= 2.4.4.1
                     , Stack >= 0.3.2
                     , parallel >= 3.2.1.0
                     , lens >= 4.15.1
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.7.1
                     , unix
                     , async >= 2.1.1
                     , bytestring
                     , aeson
                     , prng >= 0.1.0.0
                     , gnuplot >= 0.5.4.2
  default-extensions:  DeriveGeneric
  default-language:    Haskell2010

test-suite bcgs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , random
                     , lens >= 4.15.1
                     , bcgs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bcgs-bench-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base 
                     , prng >= 0.1.0.0
                     , criterion
                     , vector
                     , bcgs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tosku/bcgs-haskell
