name:                bcgs
version:             0.1.0.0
synopsis:            Ground State calculations of Blume Capel random bond model
-- description:
homepage:            https://github.com/tosku/bcgs-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Thodoris Papakonstantinou
maintainer:          mail@tpapak.com
copyright:           2017 Thodoris Papakonstantinou
category:            Physics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph
                     , Data.Graph.Grid
                     , Test.Graph.Grid
                     , Data.Graph.Network
                     , Data.Graph.BFS
                     , Test.Graph.BFS
                     , Data.Graph.PushRelabel.Internal
                     , Data.Graph.PushRelabel.Pure
                     , Data.Graph.PushRelabel.STM
                     , Data.BlumeCapel
                     , Test.BlumeCapel
                     , Data.BlumeCapel.GSNetwork
                     , Test.BlumeCapel.GSNetwork
                     , Data.BlumeCapel.GSIO
                     , Test.BlumeCapel.GSIO
                     , Test.BCTest
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , vector
                     , stm >= 2.4.4.1
                     , template-haskell >= 2.11.1.0
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.10.2
                     , Unique
                     , unix
                     , async >= 2.1.1
                     , aeson
                     , aeson-pretty
                     , text >= 1.2.2.2
                     , async >= 2.1.1
                     , bytestring
                     , fgl >= 5.5.3.1
                     , prng >= 0.1.0.0
                     , either-unwrap >= 1.1
                     , stm >= 2.4.4.1
                     , parallel >= 3.2.1.0
                     , monad-parallel >= 0.7.2.2
                     , monad-par-extras
  default-language:    Haskell2010

executable bcgs-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -eventlog -rtsopts -with-rtsopts=-N
  other-modules:       Data.Graph
                     , Data.Graph.BFS
                     , Test.Graph.BFS
                     , Data.Graph.Network
                     , Data.Graph.PushRelabel.Internal
                     , Data.Graph.PushRelabel.Pure
                     , Data.Graph.PushRelabel.STM
                     , Data.Graph.Grid
                     , Test.Graph.Grid
                     , Data.BlumeCapel
                     , Test.BlumeCapel
                     , Data.BlumeCapel.GSNetwork
                     , Test.BlumeCapel.GSNetwork
                     , Data.BlumeCapel.GSIO
                     , Test.BlumeCapel.GSIO
                     , Test.BCTest
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , stm >= 2.4.4.1
                     , parallel >= 3.2.1.0
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.10.2
                     , vector
                     , unix
                     , async >= 2.1.1
                     , bytestring
                     , text >= 1.2.2.2
                     , aeson
                     , aeson-pretty
                     , prng >= 0.1.0.0
                     , either-unwrap >= 1.1
                     , monad-parallel >= 0.7.2.2
                     , gnuplot >= 0.5.4.2
                     , fgl >= 5.5.3.1
  default-extensions:  DeriveGeneric
  default-language:    Haskell2010

test-suite bcgs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , random
                     , text >= 1.2.2.2
                     , fgl >= 5.5.3.1
                     , bcgs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bcgs-bench-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base 
                     , criterion
                     , vector
                     , containers >= 0.5.10.2
                     , prng >= 0.1.0.0
                     , fgl >= 5.5.3.1
                     , bcgs
  ghc-options:         -v3 -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tosku/bcgs-haskell
