name:                bcgs
version:             0.1.0.0
synopsis:            Ground State calculations of Blume Capel random bond model
-- description:
homepage:            https://github.com/tosku/bcgs-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Thodoris Papakonstantinou
maintainer:          mail@tpapak.com
copyright:           2017 Thodoris Papakonstantinou
category:            Physics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.BlumeCapel
                     , Data.BlumeCapel.GSNetwork
                     , Data.BlumeCapel.GSIO
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , stm >= 2.4.4.1
                     , Unique
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.10.2
                     , aeson
                     , aeson-pretty
                     , unix
                     , unix-bytestring >= 0.3.7.2
                     , text >= 1.2.2.2
                     , async >= 2.1.1
                     , bytestring
                     , either-unwrap >= 1.1
                     , parallel >= 3.2.1.0
                     , parallel-io >= 0.3.3
                     , deepseq >= 1.4.3.0
                     , monad-parallel >= 0.7.2.2
                     , monad-par-extras
                     , time >= 1.9.1
                     , utf8-string >= 0.3.9
                     , prng 
                     , graph
  default-language:    Haskell2010

executable bcgs-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  --ghc-options:         -O2 -threaded -eventlog -rtsopts -with-rtsopts=-N
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Data.BlumeCapel
                     , Data.BlumeCapel.GSNetwork
                     , Data.BlumeCapel.GSIO
  build-depends:       base >= 4.7 && < 5
                     , bcgs
                     , stm >= 2.4.4.1
                     , Unique
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.10.2
                     , aeson
                     , aeson-pretty
                     , unix
                     , unix-bytestring >= 0.3.7.2
                     , text >= 1.2.2.2
                     , async >= 2.1.1
                     , bytestring
                     , either-unwrap >= 1.1
                     , parallel >= 3.2.1.0
                     , parallel-io >= 0.3.3
                     , deepseq >= 1.4.3.0
                     , monad-parallel >= 0.7.2.2
                     , monad-par-extras
                     , time >= 1.9.1
                     , utf8-string >= 0.3.9
                     , prng
                     , graph
  default-extensions:  DeriveGeneric
  default-language:    Haskell2010

executable gs-analytics
  hs-source-dirs:      src
  main-is:             Analytics.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Data.BlumeCapel
                     , Data.BlumeCapel.GSNetwork
                     , Data.BlumeCapel.GSIO
                     , Data.BlumeCapel.Statistics
  build-depends:       base >= 4.7 && < 5
                     , bcgs
                     , stm >= 2.4.4.1
                     , containers >= 0.5.10.2
                     , aeson
                     , aeson-pretty
                     , unix
                     , unix-bytestring >= 0.3.7.2
                     , text >= 1.2.2.2
                     , async >= 2.1.1
                     , bytestring
                     , either-unwrap >= 1.1
                     , parallel >= 3.2.1.0
                     , parallel-io >= 0.3.3
                     , time >= 1.9.1
                     , utf8-string >= 0.3.9
                     , prng
                     , graph
                     , foldl >= 1.3.7
                     , inline-r
  default-extensions:  DeriveGeneric
  default-language:    Haskell2010

test-suite bcgs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , bcgs
                     , tesths
                     , vector
                     , aeson
                     , either-unwrap >= 1.1
                     , parallel >= 3.2.1.0
                     , containers
                     , bytestring
                     , prng
                     , graph
  other-modules:       Test.BlumeCapel
                     , Test.BlumeCapel.GSNetwork
                     , Test.BlumeCapel.GSIO
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bcgs-bench-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base 
                     , criterion
                     , vector
                     , containers >= 0.5.10.2
                     , prng 
                     , fgl >= 5.5.3.1
                     , bcgs
  ghc-options:         -v3 -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tosku/bcgs-haskell
